# MobileUI_demo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MobileUI_demo.pro  README.md
.github/workflows/: builds_desktop_cmake.yml  builds_desktop_qmake.yml  builds_mobile_cmake.yml  builds_mobile_qmake.yml
assets/android/: AndroidManifest.xml  build.gradle
assets/ios/: Info.plist
qml/: MobileUI.qml  qml.qrc
src/: main.cpp
